Add all images and make responsive

--- a/starting/index.html
+++ b/starting/index.html
@@ -22,12 +22,18 @@
                 <p>South Village Run Club is a free MeetUp group sponsored by City Shoes.</p>
             </div>
             <div class="images-container">
+                <img src="images/tunnel-runners.webp" />
+                <img src="images/meetup-wine.webp" />
+                <img src="images/runners-grayscale.webp" />
             </div>
             <div class="quote-container">
                 <p class="quote">"I build my weeknight plans around their events. I can exercise and meet new people every week!"</p>
                 <p class="user">-Bryce R. - financial advisor/frequent runner since 2018</p>
             </div>
             <div class="images-container">
+                <img src="images/coffeshop.webp" />
+                <img src="images/marathon-runners.webp" />
+                <img src="images/hangouts.webp" />
             </div>
             <div id="cta">
                 <h2>Come join the fun!</h2>
