Edit Page Title

--- a/starting/index.html
+++ b/starting/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-    	<title>My page title</title>
+    	<title>South Village Run Club</title>
     	<link rel="stylesheet" href="styles.css" type="text/css">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;700&display=swap" rel="stylesheet">
 	</head>
